# hello_michi

./: .gitignore  Cargo.toml  README.md  chroma_rag_setup.py  docs_vectors.npy  export_onnx_decomposed.py  generate_qa.py  hf_trainer.py  load_dataset.py  local_training.py  migrate.sh  onnx_opset_upgrade_external.py  quantize_onnx_int4.py  quantize_qoperator.py  query_vectors.npy  rag_gemma_stella.py  rag_stella.py  requirements.txt  run_upload.sh  test_stella.py  upload_gemma_to_s3.py.bak  upload_model_to_s3.py  upload_qwen_tiny.py
burn_inference/: Cargo.toml
burn_inference/src/: main.rs
dataset/: cv_dataset.json  qa_dataset.json
lora-results/checkpoint-1000/: adapter_model.safetensors  rng_state.pth  trainer_state.json
lora-results/checkpoint-200/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
lora-results/checkpoint-400/: adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
lora-results/checkpoint-600/: README.md  adapter_model.safetensors  rng_state.pth  scheduler.pt  trainer_state.json
lora-results/checkpoint-800/: adapter_config.json  adapter_model.safetensors  rng_state.pth  trainer_state.json
src/: lib.rs
